# internal/api/router.go
@@ -3,6 +3,8 @@ package api
 import (
 	"github.com/go-chi/chi/v5"
 	m "github.com/go-chi/chi/v5/middleware"
+	"github.com/go-chi/cors"
+	httpSwagger "github.com/swaggo/http-swagger/v2"
 	"net/http"
 	"simple-finance/internal/handler"
 	"simple-finance/internal/handler/middleware"
@@ -35,6 +37,14 @@ func (r *Router) setupMiddleware() {
 	r.router.Use(m.Recoverer)
 	r.router.Use(m.RealIP)
 	r.router.Use(m.RequestID)
+	r.router.Use(cors.Handler(cors.Options{
+		AllowedOrigins:   []string{"https://*", "http://*"},
+		AllowedMethods:   []string{"GET", "POST", "PUT", "DELETE", "OPTIONS"},
+		AllowedHeaders:   []string{"Accept", "Authorization", "Content-Type"},
+		ExposedHeaders:   []string{"Link"},
+		AllowCredentials: true,
+		MaxAge:           300,
+	}))
 }
 
 func (r *Router) setupRoutes() {
@@ -46,6 +56,8 @@ func (r *Router) setupRoutes() {
 		router.Get("/transaction", r.transactionHandler.GetTransactions)
 		router.Get("/transaction/{transaction_uuid}", r.transactionHandler.GetTransactionByID)
 		router.Delete("/transaction/{transaction_uuid}", r.transactionHandler.DeleteTransactionByID)
+
+		router.Get("/profile/{id}", r.transactionHandler.GetProfileHandler)
 	})
 
 	r.router.Route("/auth", func(router chi.Router) {
@@ -53,6 +65,7 @@ func (r *Router) setupRoutes() {
 		router.Post("/sign_up", r.authHandler.SignUp)
 		router.Post("/refresh/tokens", r.authHandler.RefreshTokens)
 	})
+	r.router.Mount("/swagger/", httpSwagger.WrapHandler)
 }
 
 func (r *Router) ServeHTTP(w http.ResponseWriter, req *http.Request) {
